RESOLVED FIXED199532
[GTK] ViewGestureController constructor leaves m_direction uninitialized
https://bugs.webkit.org/show_bug.cgi?id=199532
Summary [GTK] ViewGestureController constructor leaves m_direction uninitialized
Michael Catanzaro
Reported 2019-07-05 14:54:36 PDT
ViewGestureController constructor leaves m_direction uninitialized This is harmless because it should never be read until after it's initialized, but still not robust.
Attachments
Patch (1.47 KB, patch)
2019-07-05 14:55 PDT, Michael Catanzaro
no flags
Michael Catanzaro
Comment 1 2019-07-05 14:55:59 PDT
Michael Catanzaro
Comment 2 2019-07-05 15:01:38 PDT
P.S. Exalm, you should add yourself to Tools/Scripts/webkitpy/common/config/contributors.json so you'll be easier to CC ;)
Alice Mikhaylenko
Comment 3 2019-07-05 15:56:51 PDT
Oops. :) But yeah, it's always initialized before it's used.
WebKit Commit Bot
Comment 4 2019-07-08 01:17:30 PDT
Comment on attachment 373541 [details] Patch Clearing flags on attachment: 373541 Committed r247203: <https://trac.webkit.org/changeset/247203>
WebKit Commit Bot
Comment 5 2019-07-08 01:17:31 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.