[GTK] ViewGestureController constructor leaves m_direction uninitialized https://bugs.webkit.org/show_bug.cgi?id=199532

Reviewed by Carlos Garcia Campos.

This is harmless because it should never be read until after it's initialized, but still not
robust. Fix it by assuming Back as the default value until the first swipe begins.

* UIProcess/ViewGestureController.h:


Canonical link: https://commits.webkit.org/213460@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@247203 268f45cc-cd09-0410-ab3c-d52691b4dbfc